@@ -807,7 +807,6 @@ const (
 	MetaDurationSeconds     = "*duration_seconds"
 	MetaDurationNanoseconds = "*duration_nanoseconds"
 	CapAttributes           = "Attributes"
-	CapResourceMessage      = "ResourceMessage"
 	CapResourceAllocation   = "ResourceAllocation"
 	CapMaxUsage             = "MaxUsage"
 	CapSuppliers            = "Suppliers"
