@@ -10,6 +10,7 @@ cgrates (0.10.2~dev) UNRELEASED; urgency=medium
   * [SessionS] Use correctly SessionTTLUsage when calculate end usage in case of terminate session from ttl mechanism
   * [RSRParsers] Removed attribute sistem from RSRParser  
   * [RSRParsers] Added grave accent(`) char as a delimiter to not split tge RSR value
+  * [SessionS] Rename from ResourceMessage to ResourceAllocation
 
  -- DanB <danb@cgrates.org>  Tue, 12 May 2020 13:08:15 +0300
 
